--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
     -->
     <title>Porfolio</title>
   </head>
-  <body class="app">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <div id="root"></div>
-    <script src="bundle.js"></script> -->
+    <div id="root" class="app"></div>
+    <!-- <script src="bundle.js"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
